--- a/app.json
+++ b/app.json
@@ -1,35 +1,23 @@
 {
   "expo": {
-    "name": "lab1",
+    "name": "Lab1",
     "slug": "lab1",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-    "scheme": "lab1",
     "ios": {
       "supportsTablet": true
     },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
     "plugins": [
-      "expo-asset",
+      "expo-router",
       [
-        "expo-splash-screen",
-        {
-          "backgroundColor": "#ffffff",
-          "image": "./assets/splash-icon.png"
-        }
-      ],
-      "react-native-edge-to-edge"
-    ]
+        "expo-splash-screen"
+      ]
+    ],
+    "experiments": {
+      "typedRoutes": true
+    }
   }
 }
