--- a/lab3/package.json
+++ b/lab3/package.json
@@ -48,6 +48,7 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
+    "tailwindcss": "3",
     "typescript": "^5.3.3"
   },
   "private": true
